--- a/Recommendation_System/2. Content_based_Filtering_Recommendation.ipynb
+++ b/Recommendation_System/2. Content_based_Filtering_Recommendation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "4  [22기 P.O.P 단원 모집!]\\n\\r\\n📢 스펙업 대표동아리 Top30\\r\\n📢...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>link</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>서울권 운동(스포츠) 연합 커뮤니티 STREET BOND</td>\n",
+       "      <td>https://www.koreapas.com/bbs/view.php?id=circl...</td>\n",
+       "      <td>📌 STREET BOND 소개\\r\\n운동은 하고 싶은데, 몇 달 회비 끊고 하자니,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>안녕하세요 한일문화연구회에서 함께할 동아리원을 모집합니다</td>\n",
+       "      <td>https://www.koreapas.com/bbs/view.php?id=circl...</td>\n",
+       "      <td>일본문화에 관심이 있으신가요? 심심한데 마땅한 동아리가 없으신가요? 중앙동아리 한일...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2020학년도 2학기 KUISA 14기 벗 모집이 하루 남았습니다!!!!!!</td>\n",
+       "      <td>https://www.koreapas.com/bbs/view.php?id=circl...</td>\n",
+       "      <td>👉2020년도 2학기 KUISA 14기 벗 모집 안내👈\\n\\r\\nKUISA란, Ko...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1분 명상법~! </td>\n",
+       "      <td>https://www.koreapas.com/bbs/view.php?id=circl...</td>\n",
+       "      <td>안녕하세요! 원불교 학생회입니다. ㅎㅎ\\r\\n이번에는 명상을 어떻게 하는 지에 대한...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>연합발표토론동아리 POP 22기 모집합니다 !</td>\n",
+       "      <td>https://www.koreapas.com/bbs/view.php?id=circl...</td>\n",
+       "      <td>[22기 P.O.P 단원 모집!]\\n\\r\\n📢 스펙업 대표동아리 Top30\\r\\n📢...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>595</th>\n",
+       "      <td>596</td>\n",
+       "      <td>⭐️고려대 유일 사격동아리 '명중사격부' 신입부원 모집⭐️</td>\n",
+       "      <td>https://www.koreapas.com/bbs/view.php?id=circl...</td>\n",
+       "      <td>🔥너의 마음을 명중🔥 넌 이미 신청서를 쓰고 있다!!🔥 (~3/29)\\n\\r\\n고려...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>596</th>\n",
+       "      <td>597</td>\n",
+       "      <td>○ 중앙동아리 예술비평연구회에서 신입회원을 모집합니다! ○</td>\n",
+       "      <td>https://www.koreapas.com/bbs/view.php?id=circl...</td>\n",
+       "      <td>===== 2020년 1학기는 세미나를 화요일이 아닌 수요일에 진행하기로 했습니다....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>597</th>\n",
+       "      <td>598</td>\n",
+       "      <td>[오늘 8시 마감]💡고려대학교 유일의 브랜드 컨설팅 학회 CREAKET에서 14기를...</td>\n",
+       "      <td>https://www.koreapas.com/bbs/view.php?id=circl...</td>\n",
+       "      <td>🔥🔥오늘 8시 서류 마감🔥🔥\\r\\n🔆🔆망설이지 말고 지원해주세요🔆🔆\\n\\r\\n🎨Fi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>598</th>\n",
+       "      <td>599</td>\n",
+       "      <td>[D-1] ⚠Partyproviders 27th 2차 리크루팅‼ ~3.22</td>\n",
+       "      <td>https://www.koreapas.com/bbs/view.php?id=circl...</td>\n",
+       "      <td>많은 문의와 요청에 힘입어, Partyproviders의 2차 리크루팅이 오늘부터 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>599</th>\n",
+       "      <td>600</td>\n",
+       "      <td>[KUHS] 고려대학교 ‘호스피스 봉사동아리 (KUHS)’에서 신입부원을 모집합니다...</td>\n",
+       "      <td>https://www.koreapas.com/bbs/view.php?id=circl...</td>\n",
+       "      <td>💌 KUHS (Korea University Hospice Society; 고려대학...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>600 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id                                              title  \\\n",
+       "0      1                 서울권 운동(스포츠) 연합 커뮤니티 STREET BOND      \n",
+       "1      2                 안녕하세요 한일문화연구회에서 함께할 동아리원을 모집합니다      \n",
+       "2      3        2020학년도 2학기 KUISA 14기 벗 모집이 하루 남았습니다!!!!!!    \n",
+       "3      4                                        1분 명상법~!     \n",
+       "4      5                         연합발표토론동아리 POP 22기 모집합니다 !    \n",
+       "..   ...                                                ...   \n",
+       "595  596                  ⭐️고려대 유일 사격동아리 '명중사격부' 신입부원 모집⭐️    \n",
+       "596  597                  ○ 중앙동아리 예술비평연구회에서 신입회원을 모집합니다! ○    \n",
+       "597  598  [오늘 8시 마감]💡고려대학교 유일의 브랜드 컨설팅 학회 CREAKET에서 14기를...   \n",
+       "598  599         [D-1] ⚠Partyproviders 27th 2차 리크루팅‼ ~3.22    \n",
+       "599  600  [KUHS] 고려대학교 ‘호스피스 봉사동아리 (KUHS)’에서 신입부원을 모집합니다...   \n",
+       "\n",
+       "                                                  link  \\\n",
+       "0    https://www.koreapas.com/bbs/view.php?id=circl...   \n",
+       "1    https://www.koreapas.com/bbs/view.php?id=circl...   \n",
+       "2    https://www.koreapas.com/bbs/view.php?id=circl...   \n",
+       "3    https://www.koreapas.com/bbs/view.php?id=circl...   \n",
+       "4    https://www.koreapas.com/bbs/view.php?id=circl...   \n",
+       "..                                                 ...   \n",
+       "595  https://www.koreapas.com/bbs/view.php?id=circl...   \n",
+       "596  https://www.koreapas.com/bbs/view.php?id=circl...   \n",
+       "597  https://www.koreapas.com/bbs/view.php?id=circl...   \n",
+       "598  https://www.koreapas.com/bbs/view.php?id=circl...   \n",
+       "599  https://www.koreapas.com/bbs/view.php?id=circl...   \n",
+       "\n",
+       "                                           description  \n",
+       "0    📌 STREET BOND 소개\\r\\n운동은 하고 싶은데, 몇 달 회비 끊고 하자니,...  \n",
+       "1    일본문화에 관심이 있으신가요? 심심한데 마땅한 동아리가 없으신가요? 중앙동아리 한일...  \n",
+       "2    👉2020년도 2학기 KUISA 14기 벗 모집 안내👈\\n\\r\\nKUISA란, Ko...  \n",
+       "3    안녕하세요! 원불교 학생회입니다. ㅎㅎ\\r\\n이번에는 명상을 어떻게 하는 지에 대한...  \n",
+       "4    [22기 P.O.P 단원 모집!]\\n\\r\\n📢 스펙업 대표동아리 Top30\\r\\n📢...  \n",
+       "..                                                 ...  \n",
+       "595  🔥너의 마음을 명중🔥 넌 이미 신청서를 쓰고 있다!!🔥 (~3/29)\\n\\r\\n고려...  \n",
+       "596  ===== 2020년 1학기는 세미나를 화요일이 아닌 수요일에 진행하기로 했습니다....  \n",
+       "597  🔥🔥오늘 8시 서류 마감🔥🔥\\r\\n🔆🔆망설이지 말고 지원해주세요🔆🔆\\n\\r\\n🎨Fi...  \n",
+       "598  많은 문의와 요청에 힘입어, Partyproviders의 2차 리크루팅이 오늘부터 ...  \n",
+       "599  💌 KUHS (Korea University Hospice Society; 고려대학...  \n",
+       "\n",
+       "[600 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clubs[['id','title','link','description']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +374,7 @@
        "Name: txt, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +394,7 @@
        "'서울권 운동 스포츠 연합 커뮤니티 STREET BOND STREET BOND 소개 운동은 하고 싶은데 몇 달 회비 끊고 하자니 돈이 아깝고.. 그렇다고 혼자 운동하는 건 재미 없지 않나요? STREET BOND는 우리 동네의 다양한 운동 스포츠 을 즐기는 커뮤니티입니다. 하루 비용만 내고 운동을 즐길 수 있습니다! 센터 중심이 아닌 다양한 호스트들의 개성 넘치는 운동 스포츠 프로그램을 즐길 수 있습니다. 모임원들과 함께 운동하고 소통할 수 있습니다. 강제 모임 강제 뒷풀이 전혀 없습니다! 원하시는 모임만 참여하세요! 이제는 운동에 나를 맞추지 말고 내가 원하는 시간 원하는 장소를 나에게 맞추고 다양한 운동을 즐기세요. 대상 성별 직업 종교 등 상관 X 단 운영에 불편을 주시는 분들은 참여자 또는 호스트에 의해 강퇴될 수 있습니다. 활동 내용 CLUB 새로운 운동 스포츠 도 가볍게 체험해보고 즐기는 모임 자신에게 맞는 운동을 찾을 수 있습니다! PROJECT 추후 오픈 공통의 목표를 가진 멤버들이 해당 분야의 HOST와 함께 관련 지식과 경험을 쌓도록 지원하는 프로그램 나에게 맞는 운동을 좀 더 전문적으로 배울 수 있습니다! 활동권 동대문구 성동구 광진구 건대 주변 강남구 등.. 활동 종류 유도 발레 댄스 등산 추가 예정 참고 httpswww.instagram.comstreetbond 재능을 공유하세요! 오셔서 새로운 활동 호스트를 하셔도 됩니다! 신청 문의 kakao id bigmt 가입 문의 및 신청 가입 양식을 작성해서 kakao id bigmt 으로 보내주세요! . 성명 실명 . 거주 지역 구 동 . 직업 ex. 학생 직장인 등 . 성별 . 나이 . 가입 경로 ex. 인스타 소모임 에브리타임 x대 등 . 운동 관심 분야 앞으로 콘텐츠 영입에 반영합니다! . 운동 경력 ex. 복싱 년 러닝 주 회 년 STREET BOND 단톡방은 모임 회 이상 참석하신 분들만 초대 됩니다. No Show 예방 운동 러닝 등산 유도 요가 발레 댄스 동아리'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,13 +413,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ssl\n",
     "from urllib.request import urlopen\n",
     "from bs4 import BeautifulSoup\n",
+    "import re\n",
     "context = ssl._create_unverified_context()\n",
     "resp = urlopen('https://www.ranks.nl/stopwords/korean',context=context)\n",
     "dom = BeautifulSoup(resp.read().decode('utf8'),'html.parser')\n",
@@ -261,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +453,7 @@
        "['아', '휴', '아이구']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +464,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.Series(stopwords).to_pickle('stopwords.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +501,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenize = Tokenize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +543,7 @@
        "(600, 46150)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +649,7 @@
        " 0.10384146617472709]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,33 +700,88 @@
     "    i = indices[title]\n",
     "    sim_scores = list(enumerate(cosine_sim[i]))\n",
     "    sim_scores = sorted(sim_scores, key = lambda x : x[1], reverse=True)\n",
-    "    sim_scores = sim_scores[1:11] \n",
+    "    sim_scores = sim_scores[1:21] \n",
     "    recommend = titles[[s[0] for s in sim_scores]]\n",
     "    return recommend"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "164                           [柔道部] 유도부 상시모집 🥋 \n",
-       "342                           [柔道部] 유도부 상시모집 🥋 \n",
-       "403                           [柔道部] 유도부 상시모집 🥋 \n",
-       "479                           [柔道部] 유도부 상시모집 🥋 \n",
-       "578                           [柔道部] 유도부 상시모집 🥋 \n",
-       "565          [어갑배] 배드민턴 소모임 어갑배에서 신입부원을 모집합니다! \n",
-       "199    [어갑배] 고려대학교 배드민턴 소모임 어갑배에서 신입회원을 모집합니다! \n",
-       "247    [어갑배] 고려대학교 배드민턴 소모임 어갑배에서 신입회원을 모집합니다! \n",
-       "485                 🤺D-3🤺고대 펜싱부 20-1 신입부원 모집!! \n",
-       "465               🤺모집기간 변경🤺 펜싱부 20-1 신입부원 모집!! \n",
+       "'서울권 운동(스포츠) 연합 커뮤니티 STREET BOND\\xa0  '"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titles[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "342                                  [柔道部] 유도부 상시모집 🥋 \n",
+       "565                 [어갑배] 배드민턴 소모임 어갑배에서 신입부원을 모집합니다! \n",
+       "485                        🤺D-3🤺고대 펜싱부 20-1 신입부원 모집!! \n",
+       "52                 4차산업혁명 인공지능 융합 KU 프로젝트 스터디 2기 모집  \n",
+       "391    고려대학교 정경대학 야구동아리 퍼블릭스가 2020년을 함께할 당신을 찾습니다!!  \n",
        "Name: title, dtype: object"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_recommendations(titles[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "164                                  [柔道部] 유도부 상시모집 🥋 \n",
+       "342                                  [柔道部] 유도부 상시모집 🥋 \n",
+       "403                                  [柔道部] 유도부 상시모집 🥋 \n",
+       "479                                  [柔道部] 유도부 상시모집 🥋 \n",
+       "578                                  [柔道部] 유도부 상시모집 🥋 \n",
+       "565                 [어갑배] 배드민턴 소모임 어갑배에서 신입부원을 모집합니다! \n",
+       "199           [어갑배] 고려대학교 배드민턴 소모임 어갑배에서 신입회원을 모집합니다! \n",
+       "247           [어갑배] 고려대학교 배드민턴 소모임 어갑배에서 신입회원을 모집합니다! \n",
+       "485                        🤺D-3🤺고대 펜싱부 20-1 신입부원 모집!! \n",
+       "465                      🤺모집기간 변경🤺 펜싱부 20-1 신입부원 모집!! \n",
+       "178                         고려대 펜싱뷰 20-1학기 신입부원 상시모집🤺🤺\n",
+       "152         [펜싱부🤺🤺🤺] 교내 유일 펜싱동아리에서 20-1 신입부원을 모집합니다!! \n",
+       "23             (~7/13) 굿즈 디자인 동아리 \"DE.GOODS\" 신입 멤버 모집 \n",
+       "52                 4차산업혁명 인공지능 융합 KU 프로젝트 스터디 2기 모집  \n",
+       "301    고려대학교 정경대학 야구동아리 퍼블릭스가 2020년을 함께할 당신을 찾습니다!!  \n",
+       "391    고려대학교 정경대학 야구동아리 퍼블릭스가 2020년을 함께할 당신을 찾습니다!!  \n",
+       "511    고려대학교 정경대학 야구동아리 퍼블릭스가 2020년을 함께할 당신을 찾습니다!!  \n",
+       "67                                🏃‍♂️러닝크루 크루원 모집합니다! \n",
+       "97                ⚾️야구동아리 퍼블릭스 현재 신규 회원 유니폼 신청중입니다!  \n",
+       "54                             📢고려대학교 🥋태권도부🥋 신입부원 모집! \n",
+       "Name: title, dtype: object"
+      ]
+     },
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
