--- a/Recommendation_System/3. Collaborative_Filtering_Recommendation.ipynb
+++ b/Recommendation_System/3. Collaborative_Filtering_Recommendation.ipynb
@@ -542,6 +542,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 유저 시뮬레이션\n",
+    "키워드 하나 뽑아서 해당되는 동아리 중 랜덤으로 뽑는다"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 184,
    "metadata": {},
@@ -549,9 +557,15 @@
    "source": [
     "def simulation(keyword, userId):\n",
     "    index = tags[tags.apply(lambda x: True if keyword in x else False)].index\n",
+    "    \n",
+    "    #index중에서 len(index)//2+1개만큼 픽 \n",
     "    select = np.random.choice(index,len(index)//2+1, replace=False)\n",
     "    select = pd.Series(select,name='clubId')\n",
+    "    \n",
+    "    #select횟수만큼 userid출력\n",
     "    userids = pd.Series(np.repeat(userId,len(select)),name='userId')\n",
+    "    \n",
+    "    #concat\n",
     "    dd=pd.concat([userids, select], axis=1)\n",
     "    dd['viewed']=1\n",
     "    return dd"
@@ -866,6 +880,14 @@
    ],
    "source": [
     "usertable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ↑우선은 viewed 1로 했는데, 나중에 구현할 때 랜덤으로 조회수 입력할거임\n",
+    "(실제 구현할때는 db에 유저별-페이지별 조회수 로그 수집하도록 할것임)"
    ]
   },
   {
@@ -1192,9 +1214,7 @@
    "execution_count": 196,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "user_club['viewed'] = pd.to_numeric(user_club['viewed'])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
