--- a/Recommendation_System/1. Simple Recommendation.ipynb
+++ b/Recommendation_System/1. Simple Recommendation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "Name: 6, Length: 200, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "Name: 6, Length: 200, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "Name: 6, Length: 200, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "Length: 200, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,27 +234,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      197\n",
-       "1       86\n",
-       "2      137\n",
-       "3      167\n",
-       "4      140\n",
+       "0       74\n",
+       "1      108\n",
+       "2       98\n",
+       "3       86\n",
+       "4      119\n",
        "      ... \n",
-       "195     60\n",
-       "196     97\n",
-       "197      7\n",
-       "198     53\n",
-       "199    109\n",
+       "195    176\n",
+       "196    195\n",
+       "197      8\n",
+       "198    170\n",
+       "199      9\n",
        "Length: 200, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "      <td>중앙동아리 정치경제학연구회 수레바퀴가 신입 연인을 모집합니다중앙동아리 정치경제학연구...</td>\n",
        "      <td>수레바퀴</td>\n",
        "      <td>[학회, 경영]</td>\n",
-       "      <td>197</td>\n",
+       "      <td>74</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -347,7 +347,7 @@
        "      <td>2020 YOUNG TIGERS 신입단원 모집 Dday 2020 YOUNG TIGE...</td>\n",
        "      <td>Young Tigers</td>\n",
        "      <td>[운동, 동아리]</td>\n",
-       "      <td>86</td>\n",
+       "      <td>108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -359,7 +359,7 @@
        "      <td>KULSOM D1 마감 하루 전!! 지원 마감 하루 전입니다!   한 학기 같이 즐...</td>\n",
        "      <td>KULSOM</td>\n",
        "      <td>[학회, 경영]</td>\n",
-       "      <td>137</td>\n",
+       "      <td>98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -371,7 +371,7 @@
        "      <td>유도부 상시모집  고대 유도부 신입부원 상시모집 아무나 와라 강하게 키워줄게  고...</td>\n",
        "      <td>유도부</td>\n",
        "      <td>[동아리, 운동]</td>\n",
-       "      <td>167</td>\n",
+       "      <td>86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -383,7 +383,7 @@
        "      <td>D3KUHOPE 2020년 1학기 리크루팅! 재난에서 희망으로! 안녕하세요 고려대학...</td>\n",
        "      <td>KU-HOPE</td>\n",
        "      <td>[봉사, 동아리]</td>\n",
-       "      <td>140</td>\n",
+       "      <td>119</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -426,14 +426,14 @@
        "4  D3KUHOPE 2020년 1학기 리크루팅! 재난에서 희망으로! 안녕하세요 고려대학...       KU-HOPE  [봉사, 동아리]   \n",
        "\n",
        "   viewed  \n",
-       "0     197  \n",
-       "1      86  \n",
-       "2     137  \n",
-       "3     167  \n",
-       "4     140  "
+       "0      74  \n",
+       "1     108  \n",
+       "2      98  \n",
+       "3      86  \n",
+       "4     119  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,6 +441,15 @@
    "source": [
     "data = pd.concat([data, names, categorytags, viewed], axis=1)\n",
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('clubs_200_withviewcnt.csv')"
    ]
   },
   {
@@ -765,7 +774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
